fix: disable text selection on button for mobile fix: hide A D labels on mobile

--- a/helpers.css
+++ b/helpers.css
@@ -25,6 +25,12 @@
   display: none !important;
 }
 
+button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
 svg[aria-hidden='true'] {
   display: none !important;
 }
