--- a/styles/game-ui.css
+++ b/styles/game-ui.css
@@ -1,4 +1,11 @@
 /* ===== In-game volume controls ===== */
+#\$gameContainer,
+#\$gameContainer * {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
 .vol-controls {
   position: fixed;
   top: 6px;
@@ -111,4 +118,10 @@
   font-weight: bold;
   color: #8aabcc;
   text-shadow: 0 1px 3px #000;
+}
+
+@media (pointer: coarse) {
+  .turn-btn-key {
+    display: none;
+  }
 }
